--- a/view/user/default/login.phtml
+++ b/view/user/default/login.phtml
@@ -15,7 +15,7 @@
                             <span class="user-name" style="display: none"></span>
                             &nbsp;</h4>
                     </div>
-                    <form data-success-url="/" id="login-form" class="form-horizontal" action="/user/login" method="POST">
+                    <form data-success-url="<?= $this->login_referrer ?: '/' ?>" id="login-form" class="form-horizontal" action="/user/login" method="POST">
                         <div class="input-group">
                             <span class="input-group-addon" id="basic-addon1">
                                 <i class="fa fa-user" aria-hidden="true"></i></span>              
