Add user e-mails

--- a/view/user/default/profile.phtml
+++ b/view/user/default/profile.phtml
@@ -51,18 +51,28 @@
                             <div class="panel-body">
                                 <!-- Text input-->
                                 <fieldset>
-                                    <form class="api-form form-horizontal" action="/user.form" method="POST" name="form-user" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
+                                    <form class="api-form form-horizontal" action="/user.form" method="POST" name="form-user" id="form-user" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
                                         <!-- Form Name -->
                                         <legend><?= $this->translate('Users') ?></legend>                                        
+                                        <div id="container-delete-user-{id}" class="form-group hidden clone" data-clone="add-user">
+                                            <label class="col-md-4 control-label" id="label-username-{id}" for="input-username"><?= $this->translate('Username') ?>: </label>
+                                            <div class="col-md-4">                        
+                                                <input readonly class="form-control input-md" value="" id="input-username-{id}" name="username" type="text" >
+                                            </div>
+                                            <div class="col-md-4">
+                                                <button data-container-remove="container-delete-user" data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this user?') ?>" data-body="{username}" data-toggle="modal" data-target="#confirm-delete" data-id="{id}" data-delete-confirm="/user/delete" name="confirm-delete-{id}" id="confirm-delete-{id}" type="submit" class="confirm-delete btn btn-danger">
+                                                    <?= $this->translate('Delete') ?>
+                                                </button>
+                                            </div>
+                                        </div>
                                         <?php foreach ($this->user_people AS $user) { ?>
-                                            <div id="container-delete-<?= $user->getId() ?>" class="form-group">
-                                                <label class="col-md-4 control-label" id="label-username" for="input-username">Username: </label>
+                                            <div id="container-delete-user-<?= $user->getId() ?>" class="form-group">
+                                                <label class="col-md-4 control-label" id="label-username-<?= $user->getId() ?>" for="input-username"><?= $this->translate('Username') ?>: </label>
                                                 <div class="col-md-4">                        
-                                                    <input readonly class="form-control input-md" value="<?= $user->getUsername() ?>" id="input-username" name="username" type="text" >
-                                                </div>                                        
-
+                                                    <input readonly class="form-control input-md" value="<?= $user->getUsername() ?>" id="input-username-<?= $user->getId() ?>" name="username" type="text" >
+                                                </div>
                                                 <div class="col-md-4">
-                                                    <button <?= $user->getId() == $this->user->getId() ? 'disabled' : '' ?> data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this user?') ?>" data-body="<?= $user->getUsername() ?>" data-toggle="modal" data-target="#confirm-delete" data-id="<?= $user->getId() ?>" data-delete-confirm="/user/delete" name="confirm-delete-<?= $user->getId() ?>" id="confirm-delete-<?= $user->getId() ?>" type="button" class="confirm-delete btn btn-danger">
+                                                    <button data-container-remove="container-delete-user" <?= $user->getId() == $this->user->getId() ? 'disabled' : '' ?> data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this user?') ?>" data-body="<?= $user->getUsername() ?>" data-toggle="modal" data-target="#confirm-delete" data-id="<?= $user->getId() ?>" data-delete-confirm="/user/delete" name="confirm-delete-<?= $user->getId() ?>" id="confirm-delete-<?= $user->getId() ?>" type="button" class="confirm-delete btn btn-danger">
                                                         <?= $this->translate('Delete') ?>
                                                     </button>
                                                 </div>
@@ -78,33 +88,43 @@
                             <h4 class="panel-title">
                                 <a data-toggle="collapse" data-parent="#accordion" href="#user-mail"><span class="glyphicon glyphicon-envelope">
                                     </span><?= $this->translate('E-Mails') ?></a>
-                                <i class="fa fa-plus pull-right" data-add-form="/api/user/email.form" aria-hidden="true"></i>
+                                <i class="fa fa-plus pull-right" data-add-form="/user/add-email.form" aria-hidden="true"></i>
                             </h4>
                         </div>                            
-                        <div id="user-mail" class="panel-collapse collapse">
+                        <div id="user-mail" class="panel-collapse collapse">                                                        
                             <div class="panel-body">
                                 <!-- Text input-->
-                                <div class="form-group">
-                                    <label class="col-md-4 control-label" for="email"><?= $this->translate('Email') ?></label>  
-                                    <div class="col-md-4">
-                                        <input data-mask="<?= '({
-                                                    mask: \'*{1,20}[.*{1,20}][.*{1,20}][.*{1,20}]@*{1,20}[.*{2,6}][.*{1,2}]\',
-                                                    greedy: false,
-                                                    onBeforePaste: function (pastedValue, opts) {
-                                                      pastedValue = pastedValue.toLowerCase();
-                                                      return pastedValue.replace(\'mailto:\', \'\');
-                                                    },
-                                                    definitions: {
-                                                      \'*\': {
-                                                        validator:\'[0-9A-Za-z!#$%&\\\'*+/=?^_`{|}~\-]\',
-                                                        cardinality: 1,
-                                                        casing: \'lower\'
-                                                      }
-                                                    }
-                                                  })'; ?>" value="" id="email" name="email" type="text" placeholder="<?= $this->translate('Enter your email') ?>" class="form-control input-md" required>
-                                    </div>
-                                </div>
-                            </div>
+                                <fieldset>
+                                    <form class="api-form form-horizontal" action="/user-email.form" method="POST" name="form-user-email" id="form-user-email" role="form" data-childs="[&quot;people&quot;,&quot;log&quot;]">
+                                        <!-- Form Name -->
+                                        <legend><?= $this->translate('Emails') ?></legend>                                        
+                                        <div id="container-delete-email-{id}" class="form-group hidden clone" data-clone="add-user-email">
+                                            <label class="col-md-4 control-label" id="label-mail-{id}" for="input-mail"><?= $this->translate('Email') ?>: </label>
+                                            <div class="col-md-4">                        
+                                                <input readonly class="form-control input-md" value="" id="input-mail-{id}" name="email" type="text" >
+                                            </div>
+                                            <div class="col-md-4">
+                                                <button data-container-remove="container-delete-email" data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this email?') ?>" data-body="{email}" data-toggle="modal" data-target="#confirm-delete" data-id="{id}" data-delete-confirm="/user/delete-email.json" name="confirm-delete-{id}" id="confirm-delete-{id}" type="submit" class="confirm-delete btn btn-danger">
+                                                    <?= $this->translate('Delete') ?>
+                                                </button>
+                                            </div>
+                                        </div>                                        
+                                        <?php foreach ($user->getPeople()->getEmail() AS $user_email) { ?>
+                                            <div id="container-delete-email-<?= $user_email->getId() ?>" class="form-group">
+                                                <label class="col-md-4 control-label" id="label-mail-<?= $user_email->getId() ?>" for="input-mail"><?= $this->translate('Email') ?>: </label>
+                                                <div class="col-md-4">                        
+                                                    <input readonly class="form-control input-md" value="<?= $user_email->getEmail() ?>" id="input-mail-<?= $user_email->getId() ?>" name="mail" type="text" >
+                                                </div>                                                
+                                                <div class="col-md-4">
+                                                    <button  data-container-remove="container-delete-email" data-delete-name="<?= $this->translate('Delete') ?>" data-calcel-name="<?= $this->translate('Cancel') ?>" data-header="<?= $this->translate('Confirm delete this email?') ?>" data-body="<?= $user_email->getEmail() ?>" data-toggle="modal" data-target="#confirm-delete" data-id="<?= $user_email->getId() ?>" data-delete-confirm="/user/delete-email.json" name="confirm-delete-<?= $user_email->getId() ?>" id="confirm-delete-<?= $user_email->getId() ?>" type="button" class="confirm-delete btn btn-danger">
+                                                        <?= $this->translate('Delete') ?>
+                                                    </button>
+                                                </div>
+                                            </div>                                        
+                                        <?php } ?>
+                                    </form>
+                                </fieldset>
+                            </div>                              
                         </div>
                     </div>
                     <div class="panel panel-default">
