--- a/view/user/form/add-user.phtml
+++ b/view/user/form/add-user.phtml
@@ -39,7 +39,7 @@
                         <div class="form-group">
                             <div class="col-md-2"></div>                
                             <div class="col-md-8">
-                                <button data-add="/user/add-user.json" name="add-user" type="button" class="btn btn-success pull-right">                                        
+                                <button data-clone-field="[data-clone=add-user]" data-clone-target="#form-user" data-add="/user/add-user.json" name="add-user" type="button" class="btn btn-success pull-right">                                        
                                     <?= ucfirst($this->translate('Add user')) ?>
                                 </button>                                                                                        
                             </div>
